complexdeploymentflow/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  

spec:
  replicas: 1
  selector:              # component it is going to manage
    matchLabels:
      component: web
  template:              # is how deployment gonna identify different pods it is going to manage
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: sudeep254/python-redis-postgres:1 
        ports:
          - containerPort: 9000
