complexdeploymentflow/k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:               
  replicas: 1
  selector:
    matchLabels:        # look for a label that is matching component postgres 
      component: postgres
  template:
    metadata:
      labels: 
        component: postres 
    spec:
      volumes:
        - name: postgres-storage
          persistantVolumeClaim:
            claimName: database-persistant-volume-claim        
      containers:
      - name: postgres
        image: postgres:alpine
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-storage    # volume name volume mount name should be identical 
            mountPath: /var/lib/postgresql/data   # the directory inside postgres to backup
            subPath: postgres  # any data stored inside the mount is going to be stored in folder postgres inside persistent volume claim
