complexdeploymentflow/k8s/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  
  
  
spec:     # this is gonna select our client deployment 
  type: ClusterIP # ClusterIP|LoadBalancer
  selector:
    component: web
  
  ports:
    - port: 9000
      targetPort: 9000
