complexdeploymentflow/k8s/postgres-ip-cluster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
  
spec:
  type: ClusterIP # ClusterIP|LoadBalancer
  selector:    # what sort of pod it is going to look
    component: postgres
  

  ports:
    - port: 5432
      targetPort: 5432
